Changes for Week 3
Add Child Selector

--- a/form_nostyle.html
+++ b/form_nostyle.html
@@ -12,7 +12,7 @@
 	<h1>Soccer Player Registration Form</h1>
 	<h2>Summer 2019</h2>
 		<form>
-
+<div>
 			<p class = "required">
 			<label><b>Name</b>
 			<input type="text" name="customer_name" required>
@@ -24,12 +24,13 @@
 			<input type="tel" name="phone_number" required>
 			</label>
 			</p>
-
+</div>
 			<p class = "required">
 			<label><b>Email</b>
 			<input type="email" name="email_address" required>
 			</label>
 			</p>
+
 
 			<fieldset>
 			<legend alt title = "optional">What is your preferred position?</legend>
@@ -38,7 +39,7 @@
 			<p><label> <input type="radio" name="position" required value="D"> Defense </label></p>
 			<p><label> <input type="radio" name="position" required value="GK"> Goal Keeper</label></p>
 			</fieldset>
-
+<div>
 			<p>
 			<label alt title = "optional">Preferred Start Date
 			<input type="date" name="pickup_time">
@@ -55,6 +56,7 @@
 			</select>
 			</label> 
 			</p>
+</div>			
 
 			<p alt title = "optional">
 			<label>Jersey Number
