Final Changes to Week 3
Committing all the changes for week 3 work.

--- a/form_nostyle.html
+++ b/form_nostyle.html
@@ -12,6 +12,7 @@
 	<h1>Soccer Player Registration Form</h1>
 	<h2>Summer 2019</h2>
 		<form>
+		
 <div>
 			<p class = "required">
 			<label><b>Name</b>
@@ -39,7 +40,7 @@
 			<p><label> <input type="radio" name="position" required value="D"> Defense </label></p>
 			<p><label> <input type="radio" name="position" required value="GK"> Goal Keeper</label></p>
 			</fieldset>
-<div>
+<div class= "optional">
 			<p>
 			<label alt title = "optional">Preferred Start Date
 			<input type="date" name="pickup_time">
@@ -59,7 +60,7 @@
 </div>			
 
 			<p alt title = "optional">
-			<label>Jersey Number
+			<label><span class = "green"><b>Jersey</span> Number</b>
 			<input type="text" name="jersey_number"> <!--required list="numbers"-->
 			</label>
 
