--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <ul>
 <li><a href="#">home</a></li>
 <li><a href="#">bakery </a></li>
+		<ul id="submenu"> <!-- Add submenu -->
+		    <li><a href="#">Cakes</a></li> 
+            <li><a href="#">Donuts</a></li>
+            <li><a href="#">Cupcakes</a></li>
+        </ul>
 <li><a href="#">produce</a></li>
 <li><a href="#"> place order</a></li>
 </ul>
