--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div id="wrap">
 <nav>
-<ul>
+<ul id= "menu"> <!-- created div tag -->
 <li><a href="#">home</a></li>
 <li><a href="#">bakery </a></li>
 		<ul id="submenu"> <!-- Add submenu -->
