Work resumes on other html

--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
 </header>
 
 <div id="wrap">
+<div class="menu">
 <nav>
-<ul id= "menu"> <!-- created div tag -->
+<ul>
 <li><a href="#">home</a></li>
 <li><a href="#">bakery </a></li>
-		<ul id="submenu"> <!-- Add submenu -->
+	<div class="submenu">
+	<ul> <!-- Add submenu -->
 		    <li><a href="#">Cakes</a></li> 
             <li><a href="#">Donuts</a></li>
             <li><a href="#">Cupcakes</a></li>
         </ul>
+	</div>
 <li><a href="#">produce</a></li>
 <li><a href="#"> place order</a></li>
 </ul>
 </nav>	
-
+</div>
+</div>
 <h1>Where Fresh is Best!</h1>
 <section>
     <h2>What's New in the Bakery</h2>
