Added hovering drop-down
Added hovering drop-down and added style

--- a/indexAlt.html
+++ b/indexAlt.html
@@ -13,13 +13,13 @@
 </header>
 
 <div id="wrap">
-<div class="menu">
+<div class="menu"> <!--Add menu div -->
 <nav>
 <ul>
 <li><a href="#">home</a></li>
 <li><a href="#">bakery </a></li>
-	<div class="submenu">
-	<ul> <!-- Add submenu -->
+	<div class="submenu"> <!--Add submenu div -->
+	<ul> 
 		    <li><a href="#">Cakes</a></li> 
             <li><a href="#">Donuts</a></li>
             <li><a href="#">Cupcakes</a></li>
